# EchoSentinal

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  h --force origin main  model.py  predict.py  pyproject.toml  requirements.txt  streamlit_app.py  system.py
.streamlit/: config.toml
configs/: data.yaml  inference.yaml  model_crnn.yaml  model_panns.yaml  synth.yaml
docker/: Dockerfile.console
manifests/: relabel_review.csv  train.csv
notebooks/: train_colab.ipynb
scripts/: 01_build_manifests.py  03_build_synth_valset.py  04_train.py  05_evaluate_ier.py  fetch_pretrained.py  make_colab_bundle.py
src/echosentinel/: __init__.py  constants.py
src/echosentinel/audio/: io.py
src/echosentinel/data/: audit.py  dataset.py  manifest.py  noise_bank.py  scene_synth.py
src/echosentinel/eval/: ier.py  synth_valset.py
src/echosentinel/features/: augment.py  melspec.py  pcen.py
src/echosentinel/infer/: json_writer.py  posteriors.py  postprocess.py
tests/: test_audit_rules.py  test_io_formats.py  test_json_schema.py  test_phase2_models.py  test_scene_synth.py  test_streaming_equiv.py
unwanted/docs/: class4_sources.md  frontend_stitch_prompt.md
unwanted/manifests/: relabel_review.csv
unwanted/scripts/: 00_audit_dataset.py  02_build_noise_bank.py  05_evaluate_ier.py  06_tune_thresholds.py  07_recalibrate.py  make_colab_bundle.py
unwanted/tests/: test_audit_rules.py  test_io_formats.py  test_postprocess.py  test_scene_synth.py
web/: analyze.html  archive.html  index.html  results.html
web/assets/: api.js  console.css
(+11 files in other folders)
