[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "echosentinel"
version = "2.0.0"
description = "Underwater sound event detection and classification (PS-12: AI tools for Underwater Domain Awareness)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.1",
    "torch>=2.2",
    "torchaudio>=2.2",
    "librosa>=0.10.2",
    "scipy>=1.10",
    "soundfile>=0.12.1",
    "soxr>=0.3.7",
    "omegaconf>=2.3.0",
    "pandas>=2.0,<2.4",
    "pyannote.metrics>=3.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
